@@ -1,1 +1,1 @@
-sudo apt install xdg-utils xsel ripgrep chafa timg python3-cryptography python3-magic python3-requests python3-feedparser python3-bs4 python3-readability python3-pil python3-setproctitle
+sudo apt install file xdg-utils xsel ripgrep chafa timg python3-cryptography python3-requests python3-feedparser python3-bs4 python3-readability python3-pil python3-setproctitle
